--- a/skins/supernova-ivash/skin.css
+++ b/skins/supernova-ivash/skin.css
@@ -259,11 +259,16 @@ div .ui-dialog-content table {
   border-color: #483634;
 }
 
-/* Pseudoelement to use colors from CSS in JS */
-#style_probe
-{
-  border-top-color: #F9C749;  /* Reserved for unit_preview border color */
+/*/!* Pseudoelement to use colors from CSS in JS *!/*/
+/*#style_probe*/
+/*{*/
+  /*border-top-color: #F9C749;  /!* Reserved for unit_preview border color *!/*/
+/*}*/
+
+.unit_border_selected {
+  border-color: #F9C749;  /* Reserved for unit_preview border color */
 }
+
 
 #sys_dark_matter_hint {color: #00CCFF; font-weight: bold; float: left}
 #off_get_dark_matter { color: #ff8900; font-weight: bold;}
