--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -1312,3 +1312,8 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 #market_trader .button_pseudo {
   width: 10em;
 }
+
+.survey_block [survey_id] {
+  width: 93%;
+  text-align: left;
+}
