SKIN-feat-40a14.0: Upgraded jQueryUI. jQUI buttons now matches in-game style. New checkbox & radiobox look

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -16,14 +16,13 @@
     {-meta-}
 
     <link rel="shortcut icon" href="{D_SN_ROOT_VIRTUAL}favicon.ico?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/jquery.css?{C_var_db_update}" />
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}jquery.css?{C_var_db_update}" />
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/jquery-ui.css?{C_var_db_update}" />
 
     <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global.css?{C_var_db_update}" />
     <!-- IF LOGIN_LOGOUT -->
     <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/login.css?{C_var_db_update}" />
     <!-- ENDIF -->
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_server.css?{C_var_db_update}" />
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global_server.css?{C_var_db_update}" />-->
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}design/css/global-ie.css?{C_var_db_update}" />
     <![endif]-->
@@ -35,7 +34,7 @@
     <!-- ELSE -->
     <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}{GAME_MODE_CSS_PREFIX}skin_background.css?{C_var_db_update}" />
     <!-- ENDIF -->
-    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin_server.css?{C_var_db_update}" />
+    <!--<link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{dpath}skin_server.css?{C_var_db_update}" />-->
 
 
     <title>{title}</title>
@@ -53,6 +52,7 @@
     </script>
 
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
+    <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/fm.checkator.jquery.js?{C_var_db_update}"></script>
     <script type="text/javascript">
       jQuery.fx.off = PLAYER_OPTION_ANIMATION_DISABLED;
 
