--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -91,9 +91,9 @@
                   <span class="negative">{L_sys_maximum_level}</span>
                 <!-- ELSEIF governors.COST <= DARK_MATTER -->
                   <!-- IF ! PLANET_GOVERNOR_ID || governors.ID == PLANET_GOVERNOR_ID -->
-                    <a href="overview.php?mode=manage&hire={governors.ID}"><span class="positive">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</span></a>
+                    <a href="overview.php?mode=manage&hire={governors.ID}" class="positive button_pseudo">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</a>
                   <!-- ELSE -->
-                    <a onclick="if(confirm('{L_ov_mrc_confirm_1} {PLANET_GOVERNOR_NAME} {L_ov_mrc_confirm_2} {PLANET_GOVERNOR_LEVEL} {L_ov_mrc_confirm_3} {governors.NAME} {L_ov_mrc_confirm_4}'))window.location='overview.php?mode=manage&hire={governors.ID}';"><span class="positive">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</span></a> <!-- href="overview.php?mode=manage&hire={governors.ID}" -->
+                    <a onclick="if(confirm('{L_ov_mrc_confirm_1} {PLANET_GOVERNOR_NAME} {L_ov_mrc_confirm_2} {PLANET_GOVERNOR_LEVEL} {L_ov_mrc_confirm_3} {governors.NAME} {L_ov_mrc_confirm_4}'))window.location='overview.php?mode=manage&hire={governors.ID}';return false;" class="positive button_pseudo">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</a> <!-- href="overview.php?mode=manage&hire={governors.ID}" -->
                   <!-- ENDIF -->
                 <!-- ELSE -->
                   <span class="negative">{L_mrc_hire_for} {governors.COST} {L_sys_dark_matter_sh}</span>
