--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -1,3 +1,41 @@
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+}
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) {
+}
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+}
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+}
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+}
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+}
+/* Desktops and laptops medium-res */
+@media only screen and (min-width : 760px) {
+}
+/* Desktops and laptops ----------- */
+@media only screen and (min-width : 1224px) {
+}
+/* Large screens ----------- */
+@media only screen and (min-width : 1824px) {
+}
+/* iPhone 4+ ----------- */
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
+}
+
+
+body {
+  color                : #E6EBFB;
+  background-attachment: fixed;
+  background-repeat    : no-repeat;
+  background-position  : top;
+}
+
 body, form, table, input, select {
   font-family : Tahoma, sans-serif;
 }
@@ -1464,3 +1502,71 @@ input[type=checkbox] {
 .checkator_element.checkbox { /* New element */
   border: 2px solid #abadb3;
 }
+
+
+
+
+
+
+th, td, input, select, textarea {
+  border               : 0.1em #415680 solid;
+  background-color     : #344566;
+  padding-left         : 0.3em;
+  padding-right        : 0.3em;
+  font-weight          : bold;
+}
+
+td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
+  font-weight          : bold;
+  background-repeat:  repeat-x;
+}
+
+td.l {
+  vertical-align       : top;
+  padding              : 0.3em;
+}
+
+table table {
+  border               : 0;
+}
+
+body form table th table input {
+  width: 5.5em;
+}
+
+div.z {
+  font-weight          : bold;
+}
+
+a {
+  text-decoration      : none;
+  font-weight          : bold;
+  color: inherit;
+}
+
+.style td {
+  border-top           : 0;
+}
+
+h1 {
+  font-size            : 200%;
+  border-bottom        : none; /* 0 #344566 solid */
+
+  margin-top: 1em;
+}
+
+.hint {
+  text-align: justify;
+}
+
+.ov_user_total {
+  color: #FF0000
+}
+.ov_user_rank {
+  color: #FFFF00
+}
+
+#left_menu #server_name {
+  color: #00FF00;
+}
+
