--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -39,45 +39,13 @@ You can look at actual JQ link for theme in /design/css/jquery-ui.css
   JQ Clickable: Default State
 #dfeafd
   JQ Header/Toolbar background
+#E6EBFB
+  Input element color
 
 */
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-}
-
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-}
-
-/* iPads (portrait) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-}
-
-/* iPhone 4+ ----------- */
-@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
-}
-
-
 body {
-  color                : #E6EBFB;
-  /*margin-top           : 5px;*/
-  /*margin-left          : 1px;*/
   background-color     : #132544;
-  background-attachment: fixed;
-  background-repeat    : no-repeat;
-  background-position  : top;
   scrollbar-arrow-color: #E6EBFB;
   scrollbar-base-color: #344566;
   scrollbar-track-color: #344566;
@@ -93,56 +61,21 @@ input, select, textarea, div.z {
 }
 
 th, td, input, select, textarea {
-  border               : 1px #415680 solid;
+  border-color         : #415680;
   background-color     : #344566;
-  padding-left         : 3px;
-  padding-right        : 3px;
-  font-weight          : bold;
-}
-
-td.error_message {
-  background-color     : #40557E;
 }
 
 td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
-  font-weight          : bold;
   background-image     : url("images/table_th_background.png");
-  background-repeat:  repeat-x;
 }
 
 td.l {
-  vertical-align       : top;
-  padding              : 3px;
-/*  background-image     : url("images/table_th_background.png");*/
   background-image     : url("img/bg2.gif");
-}
-
-table table {
-  border               : 0;
-}
-
-body form table th table input {
-  width: 60px;
-}
-
-div.z {
-  font-weight          : bold;
-}
-
-a {
-  text-decoration      : none;
-  font-weight          : bold;
-  color: inherit;
-  /* color                : #f2f2f2;*/
 }
 
 a:not(.nohover):hover {
   background-color     : #415680;
   text-decoration      : none;
-}
-
-.style td {
-  border-top           : 0px;
 }
 
 .style div a {
@@ -160,28 +93,6 @@ a:not(.nohover):hover {
 .style div a:hover {
 /*  background-color     : #415680;
   text-decoration      : none;*/
-}
-
-h1 {
-  font-size            : 200%;
-  border-bottom        : 0px #344566 solid;
-
-  margin-top: 16px;
-}
-
-.hint {
-  text-align: justify;
-}
-
-.ov_user_total {
-  color: #FF0000
-}
-.ov_user_rank {
-  color: #FFFF00
-}
-
-#left_menu #server_name {
-  color: #00FF00;
 }
 
 #left_menu th, #menu_ally_overview {
@@ -537,4 +448,9 @@ div .ui-dialog-content table {
 
 .menu_text_t, .menu_text_b {
   text-align: center;
+}
+
+
+td.error_message {
+  background-color     : #415680;
 }
