--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -95,13 +95,8 @@ a:not(.nohover):hover {
   text-decoration      : none;*/
 }
 
-#left_menu th, #menu_ally_overview {
-  color: goldenrod;/*#63698c;*/
-/*  background-image: url(img/bg1.gif);*/
-  background-image     : url("images/table_th_background.png");
-  background-repeat: repeat-x;
+#left_menu th {
   background-color: #212c42;
-  text-align: center;
 }
 
 #menu_planet_overview, #menu_empire_overview, #menu_empire_mercenaries, #menu_info_research, #menu_empire_techtree {
@@ -138,7 +133,6 @@ a:not(.nohover):hover {
 #menu_empire_emperor, #menu_dark_matter {
   color: #ca3aca;
 }
-
 
 #menu_empire_universe
 {
@@ -190,267 +184,6 @@ div .ui-dialog-content table {
   border-color: #344566;
 }
 
-/*/!* Pseudoelement to use colors from CSS in JS *!/*/
-/*#style_probe {*/
-  /*border-top-color: #6B90D3;  /!* Reserved for unit_preview border color *!/*/
-/*}*/
-
 .unit_border_selected {
   border-color: #6B90D3;  /* Reserved for unit_preview border color */
-}
-
-#sys_dark_matter_hint {
-  color: #00CCFF;
-  font-weight: bold;
-  float: left;
-}
-
-#off_get_dark_matter {
-  color: #ff8900;
-  font-weight: bold;
-}
-
-.ui-widget-content {
-  color: white;
-}
-
-/* Universe status styles */
-.allymember {
-  color: lime;
-}
-
-.myplanet {
-  color: red;
-}
-
-.noob {
-  color: #a0ffa0;
-}
-
-.protected {
-  color: yellow;
-}
-
-.strong {
-  color: #ffa0a0;
-}
-
-.vacation {
-  color: skyblue;
-}
-
-.player_active {
-  font-weight: bold;
-}
-
-.inactive {
-  font-weight: normal;
-}
-
-.longinactive {
-  font-weight: normal;
-  font-style: italic;
-}
-
-.banned {
-  text-decoration: line-through;
-}
-
-.admin {
-  text-decoration: blink;
-  color: purple;
-}
-
-/* Flying fleet & message color coding */
-.flight {
-}
-
-.return {
-}
-
-.holding {
-}
-
-*.ownattack, .mnl_attaque {
-  color: yellow;
-}
-
-*.ownfederation {
-  color: #33CC00;
-}
-
-*.owndestroy {
-  color: gold;
-}
-
-*.ownhold {
-  color: #80a0C0;
-}
-
-*.ownmissile {
-  color: sienna;
-}
-
-*.ownespionage, *.mnl_spy, .mnl_spy td {
-  color: orange;
-}
-
-*.owntransport, .mnl_transport {
-  color: lime;
-}
-
-*.owndeploy {
-  color: lightgreen;
-}
-
-*.ownharvest, .mnl_exploit {
-  color: green;
-}
-
-*.owncolony {
-  color: blue;
-}
-
-*.ownexpedition, .mnl_expedition {
-  color: lightblue;
-}
-
-.flight .ownattack a, .flight .owncolony a, .flight .owndeploy a, .flight .owndestroy a,
-.flight .ownespionage a, .flight .ownfederation a, .flight .ownharvest a, .flight .ownhold a,
-.flight .ownmissile a, .flight .owntransport a, .flight .ownexpedition a {
-  color: #E6EBFB;
-}
-
-*.attack {
-  color: red;
-}
-
-*.colony {
-  color: lime;
-}
-
-*.deploy {
-  color: lime;
-}
-
-*.destroy {
-  color: gold;
-}
-
-*.espionage {
-  color: red;
-}
-
-*.federation {
-  color: #CC0000;
-}
-
-*.harvest {
-  color: lime;
-}
-
-*.hold {
-  color: #80a0C0;
-}
-
-*.missile {
-  color: red;
-}
-
-*.transport {
-  color: lime;
-}
-
-.flight .attack a, .flight .colony a, .flight .deploy a, .flight .destroy a, .flight .espionage a,
-.flight .federation a, .flight .harvest a, .flight .hold a, .flight .missile a, .flight .transport a {
-  color: #E6EBFB;
-}
-
-.combatreport {
-  color: red;
-}
-
-.espionagereport {
-  color: orange;
-}
-
-.timeremaining {
-  color: orange;
-}
-
-.mnl_outbox, .mnl_outbox * {
-  background-color: #000000;
-}
-
-.mnl_joueur, .mnl_joueur * {
-  background-color: #114444;
-}
-
-.mnl_exploit, .mnl_exploit * {
-/*  background-color: #999999;*/
-}
-
-.mnl_buildlist, .mnl_buildlist * {
-  color: #000066;
-}
-
-.mnl_alliance, .mnl_alliance * {
-  background-color: #446666;
-}
-
-.msg_admin, .msg_admin * {
-  color: #9900ff !important;
-  background-color: #ffffff;
-}
-
-.new_message, .new_message * {
-  color: #000000;
-  background-color: #ffffff;
-}
-
-/* Resources color coding*/
-.metal {
-  color: darkgrey;
-}
-
-.crystal {
-  color: cyan;
-}
-
-.deuterium{
-  color: #B000B0;
-}
-
-.overall{
-  color: white;
-}
-
-.metal_bg{
-  background-color: darkgrey;
-}
-
-.crystal_bg{
-  background-color: cyan;
-}
-
-.deuterium_bg {
-  background-color: #800080;
-}
-
-.overall_ng {
-  background-color: white;
-}
-
-.battle_report_link {
-  color: black;
-  background-color: white;
-}
-
-.menu_text_t, .menu_text_b {
-  text-align: center;
-}
-
-
-td.error_message {
-  background-color     : #415680;
 }
