--- a/skins/supernova-ivash/skin.css
+++ b/skins/supernova-ivash/skin.css
@@ -48,7 +48,7 @@ You can look at actual JQ link for theme in /design/css/jquery-ui.css
 /* Desktops and laptops medium-res */
 @media only screen and (min-width : 760px) {
   body {
-    background-image     : url(img/background_medium.jpg);
+    /*background-image     : url(img/background_medium.jpg);*/
   }
 }
 /* Desktops and laptops ----------- */
@@ -111,85 +111,29 @@ a:hover {
 }
 
 #left_menu th {
-  color: #63698c;
-  background-image: url(img/bg1.gif);
-  background-color: #212c42;
-  text-align: center;
+  background-image: url("img/bg1.gif");
 }
 
-#menu_planet_overview, #menu_empire_overview, #menu_empire_mercenaries {
-  color: #999933;
+#left_menu th a {
+  color: inherit;
 }
 
-#menu_admin, #menu_news {
-  color: lime;
+#left_menu td a {
+  color: #E6EBFB;
 }
 
-#menu_planet_fleets, #menu_empire_fleets {
-  color: #CC3333;
-}
-
-#menu_affiliates, #menu_logout {
-  color: #993333;
-}
-
-#menu_rules {
-  color: orange;
-}
-
-#menu_faq {
-  color: yellow;
-}
-
-
-#menu_planet_structures {
-  color: #669933;
-}
-
-#menu_planet_shipyard, #menu_planet_defense {
-  color: #993399;
-}
-
-#menu_empire_emperor, #menu_dark_matter {
-  color: purple
-}
-
-#menu_info_research, #menu_empire_techtree {
-  color: #999933;
-}
-
-#menu_empire_universe {
-  color: #999966;
-}
-
-#menu_ally_chat, #menu_comm_chat {
-  color: #996699;
-}
-
-#menu_comm_forum {
-  color: #0066CC;
-}
-
-#menu_utils_simulator {
-  color: #FF9966;
-}
-
-#menu_utils_search {
-  color: #887766;
-}
-
-#menu_options {
-  color: #CCCC66;
+.link:hover {
+  background-color     : #483634;
 }
 
 /* Setting popup table background color */
 div .ui-dialog-content table {
-  background: #344055;
+  background: #242424;
 }
 
 /* Icon file */
 .icons {
-  background-image: url(images/icons.png);
+  background-image: url(images/icons.png) !important;
 }
 
 /* Unit preview box on build pages */
@@ -197,295 +141,15 @@ div .ui-dialog-content table {
   border-color: #483634;
 }
 
-/*/!* Pseudoelement to use colors from CSS in JS *!/*/
-/*#style_probe*/
-/*{*/
-  /*border-top-color: #F9C749;  /!* Reserved for unit_preview border color *!/*/
-/*}*/
-
 .unit_border_selected {
   border-color: #F9C749;  /* Reserved for unit_preview border color */
 }
 
-
-#sys_dark_matter_hint {color: #00CCFF; font-weight: bold; float: left}
-#off_get_dark_matter { color: #ff8900; font-weight: bold;}
-
-.ui-widget-content
-{
-  color: white;
-}
-
-/* Universe status styles */
-.allymember {
-  color: lime;
-}
-
-.myplanet {
-  color: red;
-}
-
-.noob {
-  color: #a0ffa0;
-}
-
-.protected {
-  color: yellow;
-}
-
-.strong {
-  color: #ffa0a0;
-}
-
-.vacation {
-  color: skyblue;
-}
-
-.player_active {
-  font-weight: bold;
-}
-
-.inactive {
-/*  color: CCCCCC;*/
-  font-weight: normal;
-}
-
-.longinactive {
-/*  color: 999999;*/
-  font-weight: normal;
-  font-style: italic;
-}
-
-.banned {
-  text-decoration: line-through;
-}
-
-.admin {
-  text-decoration: blink;
-  color: purple;
-}
-
 /* Flying fleet & message color coding */
-.flight {
-}
-
-.return {
-}
-
-.holding {
-}
-
-*.ownattack, .mnl_attaque {
-  color: yellow;
-}
-
-*.ownfederation {
-  color: #33CC00;
-}
-
-*.owndestroy {
-  color: gold;
-}
-
-*.ownhold {
-  color: #80a0C0;
-}
-
-*.ownmissile {
-  color: sienna;
-}
-
-*.ownespionage, *.mnl_spy, .mnl_spy td {
-  color: orange;
-}
-
-*.owntransport, .mnl_transport {
-  color: lime;
-}
-
-*.owndeploy {
-  color: lightgreen;
-}
-
-*.ownharvest, .mnl_exploit {
-  color: green;
-}
-
 *.owncolony {
   color: #C76838;
 }
 
-*.ownexpedition, .mnl_expedition {
-  color: lightblue;
-}
-
-.flight .ownattack a, .flight .owncolony a, .flight .owndeploy a, .flight .owndestroy a,
-.flight .ownespionage a, .flight .ownfederation a, .flight .ownharvest a, .flight .ownhold a,
-.flight .ownmissile a, .flight .owntransport a, .flight .ownexpedition a
-{
-  color: #E6EBFB;
-}
-
-*.attack {
-  color: red;
-}
-
-.flight .attack a {
-  color: #E6EBFB;
-}
-
-*.colony {
-  color: lime;
-}
-
-.flight .colony a {
-  color: #E6EBFB;
-}
-
-*.deploy {
-  color: lime;
-}
-
-.flight .deploy a {
-  color: #E6EBFB;
-}
-
-*.destroy {
-  color: gold;
-}
-
-.flight .destroy a {
-  color: #E6EBFB;
-}
-
-*.espionage {
-  color: red;
-}
-
-.flight .espionage a {
-  color: #E6EBFB;
-}
-
-*.federation {
-  color: #CC0000;
-}
-
-.flight .federation a {
-  color: #E6EBFB;
-}
-
-*.harvest {
-  color: lime;
-}
-
-.flight .harvest a {
-  color: #E6EBFB;
-}
-
-*.hold {
-  color: #80a0C0;
-}
-
-.flight .hold a {
-  color: #E6EBFB;
-}
-
-*.missile {
-  color: red;
-}
-
-*.transport {
-  color: lime;
-}
-
-.flight .transport a {
-  color: #E6EBFB;
-}
-
-.combatreport {
-  color: red;
-}
-
-.espionagereport {
-  color: orange;
-}
-
-.timeremaining {
-  color: orange;
-}
-
-.mnl_outbox, .mnl_outbox *
-{
-  background-color: #000000;
-}
-
-.mnl_joueur, .mnl_joueur *
-{
-  background-color: #114444;
-}
-
-.mnl_exploit, .mnl_exploit *
-{
-/*  background-color: #999999;*/
-}
-
-.mnl_buildlist, .mnl_buildlist *
-{
+.mnl_buildlist, .mnl_buildlist * {
   color: #00B7F3;
-}
-
-.mnl_alliance, .mnl_alliance *
-{
-  background-color: #446666;
-}
-
-.msg_admin, .msg_admin *
-{
-  color: #9900ff !important;
-  background-color: #ffffff;
-}
-
-.new_message, .new_message *
-{
-  color: #000000;
-  background-color: #ffffff;
-}
-
-/* Resources color coding*/
-.metal{
-  color: darkgrey;
-}
-
-.crystal{
-  color: cyan;
-}
-
-.deuterium{
-  color: #800080;
-}
-
-.overall{
-  color: white;
-}
-
-.metal_bg{
-  background-color: darkgrey;
-}
-
-.crystal_bg{
-  background-color: cyan;
-}
-
-.deuterium_bg{
-  background-color: #800080;
-}
-
-.overall_ng{
-  background-color: white;
-}
-
-.battle_report_link
-{
-  color: black;
-  background-color: white;
 }
