--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -82,17 +82,34 @@
       <!-- ELSE -->
         <!-- DEFINE $LINK_BLANK = '' -->
       <!-- ENDIF -->
+
+      <!-- IF menu.TYPE == 'image' -->
+        <!-- DEFINE $MENU_LINK_IMAGE = ' class="lm_with_image"' -->
+      <!-- ELSE -->
+        <!-- DEFINE $MENU_LINK_IMAGE = '' -->
+      <!-- ENDIF -->
     <!-- ENDIF -->
 
+    <!-- IF menu.HIDE && !menu.HIDE_LOCK -->
+      <!-- DEFINE $MENU_HIDE = ' is_hide="1" style="display: none"' -->
+    <!-- ELSEIF menu.HIDE_LOCK -->
+      <!-- DEFINE $MENU_HIDE = ' hide_lock="1"' -->
+    <!-- ELSE -->
+      <!-- DEFINE $MENU_HIDE = '' -->
+    <!-- ENDIF -->
 
-    <tr id="{menu.ID}"
-      <!-- IF menu.HIDE && !menu.HIDE_LOCK --> is_hide="1" style="display: none"<!-- ELSEIF menu.HIDE_LOCK --> hide_lock="1"<!-- ENDIF -->
-      <!-- IF menu.MOVEABLE && menu.MOVE_LOCK --> move_lock="1"<!-- ENDIF -->
-    >
+    <!-- IF menu.MOVEABLE && menu.MOVE_LOCK -->
+      <!-- DEFINE $MENU_MOVABLE = ' move_lock="1"' -->
+    <!-- ELSE -->
+      <!-- DEFINE $MENU_MOVABLE = '' -->
+    <!-- ENDIF -->
+
+    <tr id="{menu.ID}"{$MENU_HIDE}{$MENU_MOVABLE}>
       <{$TX} nowrap{$MENU_CLASS}{$MENU_STYLE}{$MENU_TITLE}>
+      <!-- IF menu.WRAP_START -->{menu.WRAP_START}<!-- ENDIF -->
         <!-- IF menu.LINK -->
           <!-- DEFINE $LINK_CLOSE = '</a>' -->
-          <a href="{menu.LINK}" {$LINK_BLANK} <!-- IF menu.TYPE == 'image' -->class="lm_with_image"<!-- ENDIF -->>
+          <a href="{menu.LINK}"{$LINK_BLANK}{$MENU_LINK_IMAGE} style="position: relative">
         <!-- ELSE -->
           <!-- DEFINE $LINK_CLOSE = '' -->
         <!-- ENDIF -->
@@ -102,7 +119,9 @@
         <!-- ELSE -->
           <span<!-- IF menu.LINK --> class="<!-- IF $LINK_BLANK && menu.TYPE != 'image' -->link_external<!-- ELSE -->link_b<!-- ENDIF -->"<!-- ENDIF -->>{menu.ITEM}</span>
         <!-- ENDIF -->
-        {$LINK_CLOSE}<!-- IF menu.WRAP_END -->{menu.WRAP_END}<!-- ENDIF -->
+        <!-- IF menu.ITEM_FINISH -->{menu.ITEM_FINISH}<!-- ENDIF -->
+        <!-- IF menu.LINK --></a><!-- ENDIF -->
+        <!-- IF menu.WRAP_END -->{menu.WRAP_END}<!-- ENDIF -->
       </{$TX}>
     </tr>
   <!-- ENDIF -->
