--- a/design/css/global.css
+++ b/design/css/global.css
@@ -733,6 +733,8 @@ th.c_j, td.c_j
 
 .news_header {
   background-color: #233452;
+  padding: 0.6em 1em;
+  margin: 0.2em;
 }
 
 .news_date {
@@ -749,6 +751,7 @@ th.c_j, td.c_j
 
 .news_text {
   text-align: justify;
+  padding: 0.6em 1em;
 }
 
 .news_link {
@@ -760,29 +763,58 @@ th.c_j, td.c_j
 
 .survey_block {
   text-align: left;
-  padding: 5px;
+  margin: 0em 1em;
+  /*padding: 0.6em 0.5em;*/
+  /*border: 1px solid #415680;*/
 }
-.survey_header {
+.survey_header, .survey_voted {
+  padding: 0.6em 1em;
   background-color: #233452;
+  border: none;
+}
+.survey_voted {
+  text-align: center;
+}
+.survey_confirm {
+  padding: 0 1em;
+  background-color: #233452;
+  border: none;
+}
+
+.survey_votes {
+  position: relative;
 }
 .survey_votes_text {
-  width: 50%;
-  max-width: 50%;
+  position: relative;
+  z-index: 999;
+  padding: 0.6em 10em 0.6em 1em;
 }
-.survey_bar {
+.survey_votes_bar {
   position: absolute;
   left: 0;
   top: 0;
   height: 100%;
 
+  z-index: 998;
+
   background-color: darkgreen;
 }
-.survey_bar_number {
+.survey_votes_number, .survey_votes_percent {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 1em;
+  top: 0.6em;
   text-align: right;
   width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+.survey_votes_number {
+  right: 5em;
+}
+
+.survey_length {
+  padding: 0.6em 1em;
+  border: none;
 }
 
 .percent33{
