NEWS-fix-40a15.2: Fixed precision for ouptput voters percent

--- a/design/templates/OpenGame/news_list.tpl.html
+++ b/design/templates/OpenGame/news_list.tpl.html
@@ -71,7 +71,7 @@
                   &nbsp;
                 </div>
                 <div class="survey_votes_percent">
-                  {survey_votes.PERCENT}%
+                  {survey_votes.PERCENT_TEXT}%
                 </div>
                 <div class="survey_votes_number">
                   {survey_votes.VOTES}
